feat:stabilize WS build failure with jdk 17- EXO-60344